# TwoPanelFileManager2

./: README.md
file_manager/: CMakeLists.txt  README.md
file_manager/include/: FileCommand.h  FileOperationsFacade.h  FilePanel.h  MainWindow.h  PanelMediator.h  PathRestrictions.h
file_manager/src/: FileCommand.cpp  FileOperationsFacade.cpp  FilePanel.cpp  MainWindow.cpp  PanelMediator.cpp  PathRestrictions.cpp  main.cpp
file_manager/tests/: FileCommandTest.cpp  FileOperationsFacadeTest.cpp  FilePanelTest.cpp  MainWindowTest.cpp  PanelMediatorTest.cpp  TestMain.cpp  TestUtils.h
file_manager/tests/scenarios/: ScenarioCopyMove.cpp  ScenarioCreateRename.cpp  ScenarioDirectoryTransfer.cpp  ScenarioErrorHandling.cpp
